# fixpoint-coding-test

./: .gitignore  README.md  main.py  pyproject.toml
docs/: Network_pydoc.txt  Server_pydoc.txt
fixpoint_coding_test/: Network.py  Server.py  __init__.py
test_case/: 000_00.csv  000_01.csv  001.csv  002.csv  003_00.csv  003_01.csv  003_02.csv  003_03.csv  004_00_01.csv  004_01_01.csv  004_01_02.csv  004_02_01.csv  004_02_02.csv
tests/: test_000_utils.py  test_001_server.py  test_002_network.py
tests/test_exam/: test_exam1.py  test_exam2.py  test_exam3.py  test_exam4.py
