[tool.poetry]
name = "fixpoint-coding-test"
version = "0.1.0"
description = ""
authors = ["Hansy hansyo.souti.1999@gmail.com"]
readme = "README.md"
packages = [{include = "fixpoint_coding_test"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyproject-flake8 = "^5.0.4.post1"
isort = "^5.10.1"
pytest = "^7.2.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
# 1行の文字数
max-line-length = 119
# いくつかのメッセージを抑制
extend-ignore = ["E266", "F401",]

[tool.black]
# 1行の文字数
line-length = 119
# 動作させたくないファイルを指定
extend-exclude = '''
(
    constants.*\.py
)
'''

[tool.isort]
# black を使用したisortにする
profile = "black"
# import文のあとは2行開ける
lines_after_imports = 2
# 1行の文字数
line_length = 119

[tool.mypy]
# エラー時のメッセージを詳細表示
show_error_context = true
# エラー発生箇所の行数/列数を表示
show_column_numbers = true
# import 先のチェックを行わない (デフォルトだとサードパーティーライブラリまでチェックする)
ignore_missing_imports = true
# mypy エラーに該当しない箇所に `# type: ignore` コメントが付与されていたら警告
# ※ `# type: ignore` が付与されている箇所は mypy のエラーを無視出来る
warn_unused_ignores = true
# 冗長なキャストに警告
warn_redundant_casts = true
